# tech-digest

./: .env.template  .gitignore  LICENSE  README.ko.md  README.md  cdk.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: Dockerfile-batch  Dockerfile-lambda  font-prefer.conf  main.py  requirements.txt  run_batch.py
app/configs/: __init__.py  config-ci-batch.yaml  config-ci.yaml  config-template.yaml  config.py
app/src/: __init__.py  aws_helpers.py  constants.py  eval_metrics.py  feed_parser.py  greeter.py  logger.py  newsletter_renderer.py  summarizer.py  utils.py
app/src/prompts/: __init__.py  prompts.py
app/templates/: article.html  first_section.html  footer_section.html  header_section.html  main_contents.html  template.html
assets/: tech-doc.md
assets/diagrams/: aws-architecture.drawio  pipeline-flow.excalidraw
docs/: design.md  tech-doc.md
docs/diagrams/: aws-architecture.drawio  pipeline-flow.excalidraw
scripts/: deploy_infra.py  eval_filtering.py
tests/: conftest.py  parse_feed.py  render_newsletter.py  send_emails.py  test_aws_helpers.py  test_config.py  test_content_gate.py  test_crawl_health.py  test_eval_metrics.py  test_feed_parser.py  test_image_converter.py  test_main_notifications.py  test_model_factory.py  test_newsletter_renderer.py  test_prompt_caching.py  test_request_layer.py  test_rss_fetcher.py  test_run_batch.py  test_scraper_parsing.py  test_summarizer.py  test_summarizer_internals.py  test_utils.py
tests/eval_data/: filtering_eval_set.json
tests/fixtures/scrapers/: anthropic.html  google.html  linkedin.html  meta.html  qwen.html  xai.html
